[project]
authors = [{name = "Elnaz Azmi", email = "elnaz.azmi@kit.edu"}]
dependencies = ["requests", "build>=1.3.0,<2", "twine>=6.2.0,<7"]
name = "greeting_from_me"
requires-python = ">= 3.11"
version = "0.1.10"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
readme = "README.md"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
greeting_from_me = { path = ".", editable = true }

[tool.pixi.tasks]
start = "python -c 'from greeting_from_me import happy; print(happy.greet_happy())'"

[tool.pixi.dependencies]
requests = ">=2.32.5,<3"